group 'org.spletneseje'
version '1.0'

task wrapper(type: Wrapper) {
  gradleVersion = '2.4'
  distributionUrl = "https://services.gradle.org/distributions/gradle-$gradleVersion-all.zip"
}

apply plugin: 'java'
apply plugin: 'jacoco'
apply plugin: 'pmd'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    compile group: 'args4j', name: 'args4j', version: '2.32'
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile group: 'org.hibernate', name: 'hibernate-core', version: '5.0.0.Final'
    compile group: 'org.hibernate', name: 'hibernate-java8', version: '5.0.0.Final'
    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.8.11.1'
    compile group: 'com.h2database', name: 'h2', version: '1.4.188'
}
